<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_inside"
    android:gravity="center"
    tools:context="com.romelapj.formregistro.activity.RegistroActivity">


    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName"
        android:hint="@string/text_usuario"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/second_text"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"
        android:hint="@string/text_password"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/second_text"/>


    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/registro"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorComplete="@color/accent_color"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="@string/registro_exitoso"
        custom:pb_textProgress="@string/loading"
        custom:pb_colorError="@color/dark_primary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:id="@+id/tvErrorRegistro"
            android:textColor="@color/dark_primary"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

</LinearLayout>
