<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/dark_primary"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:text="@string/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:layout_marginBottom="40dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="40dp"
        android:background="@color/accent_color"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:text="@string/registro"
        android:id="@+id/btnRegistro"
        android:onClick="registrar"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="40dp"
        android:background="@color/accent_color"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:text="@string/acceso"
        android:id="@+id/btnAcceso"
        android:onClick="acceder"/>

</LinearLayout>
